--- a/i18n/en.json
+++ b/i18n/en.json
@@ -25,8 +25,11 @@
     "wtlvet-ui-option-proposition": "Proposition",
     "wtlvet-env-name-proposition": "Proposition",
 
-    "wtlvet-ui-option-observation": "Observation",
-    "wtlvet-env-name-observation": "Observation",
+    "wtlvet-ui-option-remark": "Remark",
+    "wtlvet-env-name-remark": "Remark",
+
+    "wtlvet-ui-option-exercise": "Exercise",
+    "wtlvet-env-name-exercise": "Exercise",
 
     "wtlvet-env-begin": "Begin",
     "wtlvet-env-end": "End"
