--- a/i18n/it.json
+++ b/i18n/it.json
@@ -19,8 +19,8 @@
     "wtlvet-ui-option-axiom": "Assioma",
     "wtlvet-env-name-axiom": "Assioma",
 
-    "wtlvet-ui-option-proof": "Dimostazione",
-    "wtlvet-env-name-proof": "Dimostazione",
+    "wtlvet-ui-option-proof": "Dimostrazione",
+    "wtlvet-env-name-proof": "Dimostrazione",
 
     "wtlvet-ui-option-proposition": "Proposizione",
     "wtlvet-env-name-proposition": "Proposizione",
